CCBUG:110843 - Yurgen Wolfgang wrote: > I tracked down that problem to the umldoc.cpp->getConcepts() operation > where I changed the "pkg->appendInterfaces(conceptList);" line to > "pkg->appendClassifiers(conceptList);" (as in Umbrello 1.4.2). > [...] Congratulations, you have just fixed an Umbrello bug !
svn path=/branches/KDE/3.5/kdesdk/umbrello/; revision=451193

--- a/THANKS
+++ b/THANKS
@@ -65,6 +65,7 @@ Tanuj <tagrawal @hss.hns.com>
 Brian Thomas <brian.thomas @gsfc.nasa.gov>
 Jean Vittor <jean.vittor @wanadoo.fr>
 Stefan Walter <sw @gegenunendlich.de>
+Yurgen Wolfgang <raptorsforever @softhome.net>
 Maciej J. Woloszyk <mat @esi.com.pl>
 Tobias Wulff <Tobias-Wulff @codeeye.de>
 
