BUG:111407 - From peter.soetens mech kuleuven ac be  2005-08-25 14:03 > Created an attachment (id=12369) > --> (http://bugs.kde.org/attachment.cgi?id=12369&action=view) > PATCH Corrected writing of template elements to xmi file > Fixes this bug report.
svn path=/branches/KDE/3.5/kdesdk/umbrello/; revision=454031

--- a/THANKS
+++ b/THANKS
@@ -59,6 +59,7 @@ Peeter Russak <pezz @tkwcy.ee>
 Paulo Roberto Rodriguez Sehn <paulo.sehn @gmail.com>
 Achim Spangler <Achim.Spangler @mnet-online.de>
 Leo Savernik <l.savernik @aon.at>
+Peter Soetens <peter.soetens @mech.kuleuven.ac.be>
 Sebastian Stein <seb.stein @gmx.de>
 Andrew Sutton <asutton @cs.kent.edu>
 Tanuj <tagrawal @hss.hns.com>
