BUG:112936 - writeClass(): Apply patch from Egbert Voigt.
svn path=/branches/KDE/3.5/kdesdk/umbrello/; revision=462333

--- a/THANKS
+++ b/THANKS
@@ -65,6 +65,7 @@ Andrew Sutton <asutton @cs.kent.edu>
 Tanuj <tagrawal @hss.hns.com>
 Brian Thomas <brian.thomas @gsfc.nasa.gov>
 Jean Vittor <jean.vittor @wanadoo.fr>
+Egbert Voigt <Egbert.Voigt @alcatel.de>
 Stefan Walter <sw @gegenunendlich.de>
 Yurgen Wolfgang <raptorsforever @softhome.net>
 Maciej J. Woloszyk <mat @esi.com.pl>
