SVN_SILENT Correcting the encoding in KDE source code
svn path=/trunk/KDE/kdesdk/umbrello/; revision=486186

--- a/THANKS
+++ b/THANKS
@@ -35,7 +35,7 @@ Olaf Hartig <OleBowle @gmx.de>
 Michel Hermier <michel.hermier @wanadoo.fr>
 Paul Hensgen <phensgen @bigpond.net.au>
 David Hugh-Jones <hughjonesd @yahoo.co.uk>
-Pekka J‰‰skel‰inen <pjaaskel @cs.tut.fi>
+Pekka J√§√§skel√§inen <pjaaskel @cs.tut.fi>
 Klas Kalass  <klas.kalass @gmx.de>
 Oliver Kellogg <okellogg @users.sourceforge.net>
 Tobias Koenig <tokoe @kde.org>
