CppTree2Uml::parseElaboratedTypeSpecifier(): Supply the m_currentNamespace  at the call to Import_Utils::createUMLObject(). Import_Utils::createUMLObject(): Add missing call to parentPkg->addObject(o). Thanks to Maciej Puzio for providing a very well written PR and solution. BUG:117875
svn path=/branches/KDE/3.5/kdesdk/umbrello/; revision=488516

--- a/THANKS
+++ b/THANKS
@@ -52,6 +52,7 @@ Heiko Nardmann <heiko.nardmann @onlinehome.de>
 Dimitri Ognibene <ognibened @yahoo.it>
 Carsten Pfeiffer <pfeiffer @kde.org>
 Ivan Porres <iporres @abo.fi>
+Maciej Puzio <maciek @work.swmed.edu>
 Ruediger Ranft <kdebugs @rranft1.mail.htwm.de>
 John Ratke <jratke @comcast.net>
 Daniel Richard G. <skunk @iskunk.org>
