apply commit 500958 from branches/KDE/3.5
svn path=/trunk/KDE/kdesdk/umbrello/; revision=500959

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Version 1.5.2
+
+* fix problem reordering methods in classes/interfaces (http://bugs.debian.org/348940)
+
 Version 1.5.1
 
 * fix loading of associationwidget with non-default color
