calculateTextPosition(): Revert commit 468001 from http://www.geeksoc.org/~jr/umbrello/uml-devel/8974.html Peter, could you take another look? Thanks. BUG:120598
svn path=/branches/KDE/3.5/kdesdk/umbrello/; revision=501786

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,9 @@
 Version 1.5.2
 
-* fix problem reordering methods in classes/interfaces (http://bugs.debian.org/348940)
+* fix problem reordering methods in classes/interfaces (http://bugs.debian.org/348940,
+  http://bugs.kde.org/119991)
+* Bugs/wishes from http://bugs.kde.org:
+* Multiplicity labels positioned incorrectly when moving entities (120598)
 
 Version 1.5.1
 
