apply commit 508487 from branches/KDE/3.5
svn path=/trunk/KDE/kdesdk/umbrello/; revision=508490

--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,8 @@ Version 1.5.2
   http://sourceforge.net/mailarchive/forum.php?thread_id=9558795&forum_id=472
 * Bugs/wishes from http://bugs.kde.org:
 * Multiplicity labels positioned incorrectly when moving entities (120598)
+* Types of entity's attributes are displayed instead of their names (120742)
+* Unable to delete entity from entity list in "UML Model" frame (120750)
 * Cannot Resize Sequence Diagram Synchronous Messages (120910)
 
 Version 1.5.1
