--- a/ChangeLog
+++ b/ChangeLog
@@ -9,9 +9,9 @@ Version 1.5.2
 * Multiplicity labels positioned incorrectly when moving entities (120598)
 * Types of entity's attributes are displayed instead of their names (120742)
 * Unable to delete entity from entity list in "UML Model" frame (120750)
-* Unable to delete entity from entity list in "UML Model" frame (120750)
-* Changing font style has no effect on classes (120761)
+* Interface names not italicized in diagram view (120761)
 * Cannot Resize Sequence Diagram Synchronous Messages (120910)
+* Crash when importing Python files (121952)
 
 Version 1.5.1
 
