http://www.geeksoc.org/~jr/umbrello/uml-devel/att-9250/straightlines.tar.bz2 applied from http://www.geeksoc.org/~jr/umbrello/uml-devel/9248.html Many thanks to Marius Helf <marius.helf_at_gmx.de> for this feature. BUG:67223
svn path=/branches/KDE/3.5/kdesdk/umbrello/; revision=513000

--- a/THANKS
+++ b/THANKS
@@ -32,6 +32,7 @@ Pascal Fleury <fleury @users.sourceforge.net>
 Gregorio Guidi <g.guidi @sns.it>
 Esben Mose Hansen <esben @despammed.com>
 Olaf Hartig <OleBowle @gmx.de>
+Marius Helf <marius.helf @gmx.de>
 Michel Hermier <michel.hermier @wanadoo.fr>
 Paul Hensgen <phensgen @bigpond.net.au>
 David Hugh-Jones <hughjonesd @yahoo.co.uk>
