--- a/THANKS
+++ b/THANKS
@@ -36,7 +36,7 @@ Marius Helf <marius.helf @gmx.de>
 Michel Hermier <michel.hermier @wanadoo.fr>
 Paul Hensgen <phensgen @bigpond.net.au>
 David Hugh-Jones <hughjonesd @yahoo.co.uk>
-Pekka J√§√§skel√§inen <pjaaskel @cs.tut.fi>
+Pekka J‰‰skel‰inen <pjaaskel @cs.tut.fi>
 Klas Kalass  <klas.kalass @gmx.de>
 Oliver Kellogg <okellogg @users.sourceforge.net>
 Tobias Koenig <tokoe @kde.org>
@@ -47,6 +47,7 @@ Gustavo Madrigal <gmadrigal @nextphere.com>
 martin <mv123q3 @hotmail.com>
 Rene Meyer <Rene.Meyer @sturmit.de>
 Laurent Montel <montel @kde.org>
+Yan Morin <yansanmo.site @gmail.com>
 Tom Morris <tfmorris @gmail.com>
 Lutz Mueller <lutz.mueller @gmx.de>
 Heiko Nardmann <heiko.nardmann @onlinehome.de>
