--- a/THANKS
+++ b/THANKS
@@ -52,6 +52,7 @@ Tom Morris <tfmorris @gmail.com>
 Lutz Mueller <lutz.mueller @gmx.de>
 Heiko Nardmann <heiko.nardmann @onlinehome.de>
 Dimitri Ognibene <ognibened @yahoo.it>
+Anthony Parent <anthony.parent @intel.com>
 Carsten Pfeiffer <pfeiffer @kde.org>
 Ivan Porres <iporres @abo.fi>
 Maciej Puzio <maciek @work.swmed.edu>
