--- a/ChangeLog
+++ b/ChangeLog
@@ -24,6 +24,7 @@ Version 1.5.2
 * "void" is imported as class and not datatypes (122184)
 * Crash when creating a datatype with the same name as a class (122188)
 * Memory problem when importing classes from c++ sources (122668)
+* Crash when refusing to rename a class on importing typedef (122914)
 
 Version 1.5.1
 
