--- a/THANKS
+++ b/THANKS
@@ -33,8 +33,9 @@ Gregorio Guidi <g.guidi @sns.it>
 Esben Mose Hansen <esben @despammed.com>
 Olaf Hartig <OleBowle @gmx.de>
 Marius Helf <marius.helf @gmx.de>
-Michel Hermier <michel.hermier @wanadoo.fr>
 Paul Hensgen <phensgen @bigpond.net.au>
+Michel Hermier <michel.hermier @wanadoo.fr>
+Harald Herres <harald.herres @control.de>
 David Hugh-Jones <hughjonesd @yahoo.co.uk>
 Pekka J‰‰skel‰inen <pjaaskel @cs.tut.fi>
 Klas Kalass  <klas.kalass @gmx.de>
