slotAutoSave(): Apply attachment id=15199 from Daniel Calviño Sánchez > Right now, if the autosave happens before the user has saved the file, the file > is saved to ~/autosave.xmi and next savings happen to that file. The "Save > as..." need to be used to save the file to a explicit location. > > With this little patch, if the autosave happens before the user has saved the > file, the autosave file is still ~/autosave.xmi, but it's no longer considered > as if the user has saved it explicitly. So when the user calls "Save" action, a > file to be saved to is asked. BUG:72019
svn path=/branches/KDE/3.5/kdesdk/umbrello/; revision=520402

--- a/THANKS
+++ b/THANKS
@@ -63,9 +63,10 @@ Daniel Richard G. <skunk @iskunk.org>
 Jonathan Riddell <jr @jriddell.org>
 Peeter Russak <pezz @tkwcy.ee>
 Paulo Roberto Rodriguez Sehn <paulo.sehn @gmail.com>
-Achim Spangler <Achim.Spangler @mnet-online.de>
+Daniel Calviño Sánchez <danxuliu @gmail.com>
 Leo Savernik <l.savernik @aon.at>
 Peter Soetens <peter.soetens @mech.kuleuven.ac.be>
+Achim Spangler <Achim.Spangler @mnet-online.de>
 Sebastian Stein <seb.stein @gmx.de>
 Andrew Sutton <asutton @cs.kent.edu>
 Tanuj <tagrawal @hss.hns.com>
