--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Version 1.5.3
+
+* Bugs/wishes from http://bugs.kde.org:
+* Save autosave file to a more obvious place (72019)
+
 Version 1.5.2
 
 * fixed problem reordering methods in classes/interfaces
