Restore code generation for static methods in the old and new generator. Emit "void" for an unspecified return type in the new generator. BUG:59190
svn path=/branches/KDE/3.5/kdesdk/umbrello/; revision=520749

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 Version 1.5.3
 
 * Bugs/wishes from http://bugs.kde.org:
+* Static variables in java code are not marked static (5591190)
 * Save autosave file to a more obvious place (72019)
 
 Version 1.5.2
