Apply attachment id=15229 by Daniel Calviño Sánchez with minor refactoring by me to eschew code duplication (make importFiles() non-abstract in ClassImport and pull parseFile() up there.) BUG:93296
svn path=/branches/KDE/3.5/kdesdk/umbrello/; revision=521213

--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,7 @@ Version 1.5.3
 * Bugs/wishes from http://bugs.kde.org:
 * Static variables in java code are not marked static (59190)
 * Save autosave file to a more obvious place (72019)
+* Usability and responsiveness improvements to code import (93296)
 
 Version 1.5.2
 
