--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@ Version 1.5.3
 
 * Switch to arrow after object creation (http://bugs.debian.org/353344)
 * Bugs/wishes from http://bugs.kde.org:
+* "Export all views" feature contributed by Daniel Calviño Sánchez (extension of 58809)
 * Static variables in java code are not marked static (59190)
 * Save autosave file to a more obvious place (72019)
 * Usability and responsiveness improvements to code import (93296)
