Attachment 15450 from Daniel Calviño Sánchez adds a new alignment type "distribute" and improves the align icons. CCBUG:67058
svn path=/branches/KDE/3.5/kdesdk/umbrello/; revision=527099

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,9 +1,10 @@
 Version 1.5.3
 
-* Switch to arrow after object creation (http://bugs.debian.org/353344)
+* Switch to arrow tool after association creation (http://bugs.debian.org/353344)
 * Bugs/wishes from http://bugs.kde.org:
 * "Export all views" feature contributed by Daniel Calviño Sánchez (extension of 58809)
 * Static variables in java code are not marked static (59190)
+* New alignment type "distribute hotizontally/vertically" (extension of 67058)
 * Save autosave file to a more obvious place (72019)
 * Usability and responsiveness improvements to code import (93296)
 * Memory problem when importing classes from c++ sources (122668)
