Apply attachment 15811 from Daniel Calviño Sánchez, also incorporating his suggestions of renaming MessageWidget::get{Min,Max}Height to get{Min,Max}Y and renaming class FloatingText to FloatingTextWidget. Thanks again for your contributions Daniel! BUG:126391
svn path=/branches/KDE/3.5/kdesdk/umbrello/; revision=535784

--- a/ChangeLog
+++ b/ChangeLog
@@ -10,6 +10,7 @@ Version 1.5.3
 * Auto-complete in parameter properties dialog in class diagram (104477)
 * Memory problem when importing classes from c++ sources (122668)
 * Nestable components and subsystems in Component diagram (124326)
+* User interaction with UMLWidget improvements (126391)
 
 Version 1.5.2
 
