--- a/ChangeLog
+++ b/ChangeLog
@@ -11,6 +11,7 @@ Version 1.5.3
 * Memory problem when importing classes from c++ sources (122668)
 * Nestable components and subsystems in Component diagram (124326)
 * User interaction with UMLWidget improvements (126391)
+* Comments are cut short when generating PHP code (126480)
 
 Version 1.5.2
 
