--- a/ChangeLog
+++ b/ChangeLog
@@ -14,6 +14,7 @@ Version 1.5.3
 * Crash loading xmi file (125331, 126968)
 * User interaction with UMLWidget improvements (126391)
 * Comments are cut short when generating PHP code (126480)
+* Crash on importing Java 1.5 classes containing annotations (127160)
 
 Version 1.5.2
 
