--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,8 @@ Version 1.5.4
 * Bugs/wishes from http://bugs.kde.org:
 * Fix crash when importing classes from a java file (129107, 130093)
 * Crash after single click on the "UML Model" tree window (126560/129252)
+* Importing java subinterface before superinterface results in superinterface
+  not being treated as an interface (130793)
 
 Version 1.5.3
 
