--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,7 @@ Version 1.5.4
 * Cannot insert transition/association TO fork/join node in activity diagram (129914)
 * Importing java subinterface before superinterface results in superinterface
   not being treated as an interface (130793)
+* Java import: method and class visibility ignored (130794)
 
 Version 1.5.3
 
