--- a/THANKS
+++ b/THANKS
@@ -29,6 +29,7 @@ Alan Ezust <alan.ezust @gmail.com>
 Jean-Remy Falleri <jr.falleri @gmail.com>
 Andi Fischer <andi.fischer @hispeed.ch>
 Pascal Fleury <fleury @users.sourceforge.net>
+JP Fournier (jfournier121 @rogers.com)
 Gregorio Guidi <g.guidi @sns.it>
 Esben Mose Hansen <esben @despammed.com>
 Olaf Hartig <OleBowle @gmx.de>
