Move all code import related files to a separate subdirectory, codeimport. Prepare for Pascal import and generator. ATM they are cheap copies from Ada, adaptation to Pascal is up next. Also move the {set,get}OptionState() methods from UMLApp to Settings because of a crash (that should have happened long ago...) CCBUG:114547 CCBUG:107347
svn path=/branches/KDE/3.5/kdesdk/umbrello/; revision=563149

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 Version 1.5.4
 
 * Bugs/wishes from http://bugs.kde.org:
+* Free Pascal code import and generator (114547)
 * Fix crash when importing classes from a java file (129107, 130093)
 * Crash after single click on the "UML Model" tree window (126560/129252)
 * Cannot insert transition/association TO fork/join node in activity diagram (129914)
