--- a/ChangeLog
+++ b/ChangeLog
@@ -12,6 +12,7 @@ Version 1.5.4
 * Java import: method and class visibility ignored (130794)
 * Java import - static not handled correctly (130926)
 * Java import - package visibility incorrectly represented (130932)
+* Java import - random import order can result in interface being teated as class (131006)
 
 Version 1.5.3
 
