--- a/ChangeLog
+++ b/ChangeLog
@@ -1,10 +1,13 @@
 Version 1.5.4
 
 * Bugs/wishes from http://bugs.kde.org:
+* Transform interface to class - fixes to some issues (79433)
 * Free Pascal code import and generator (114547)
-* Fix crash when importing classes from a java file (129107, 130093)
+* Enable selection of multiple classes in "Select classes" dialog (126485)
 * Crash after single click on the "UML Model" tree window (126560/129252)
+* Fix crash when importing classes from a java file (129107, 130093)
 * Cannot insert transition/association TO fork/join node in activity diagram (129914)
+* Command line switches: graphics export to directory does not work with relative paths (130600)
 * Importing java files that reference their own class name crashes (130735)
 * Importing java class (enum pattern) cause umbrello to hang (130792)
 * Importing java subinterface before superinterface results in superinterface
@@ -13,9 +16,7 @@ Version 1.5.4
 * Java import - static not handled correctly (130926)
 * Java import - package visibility incorrectly represented (130932)
 * Java import - random import order can result in interface being teated as class (131006)
-* Transform interface to class - fixes to some issues (79433)
-* Enable selection of multiple classes in "Select classes" dialog (126485)
-* Command line switches: graphics export to directory does not work with relative paths (130600)
+* Java import - associations not setup correctly, duplicate classes created (131270)
 
 Version 1.5.3
 
