--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Version 2.0
+
+* Bugs/wishes from http://bugs.kde.org:
+* Java import - importing interfaces - absent visibility treated as package
+  instead of public (131327)
+
 Version 1.5.4
 
 * Bugs/wishes from http://bugs.kde.org:
