writeClass(): Patch from Egbert Voigt adds missing imports for superclasses. BUG:131790
svn path=/branches/KDE/3.5/kdesdk/umbrello/; revision=569409

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Version 1.5.5
+
+* Bugs/wishes from http://bugs.kde.org:
+* Java import - importing interfaces - absent visibility treated as package
+  instead of public (131327)
+* Python code generation not independent of diagram view (131790)
+
 Version 1.5.4
 
 * Bugs/wishes from http://bugs.kde.org:
