--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,7 @@ Version 1.5.5
 * Java import - importing interfaces - absent visibility treated as package
   instead of public (131327)
 * Python code generation not independent of diagram view (131790)
+* Java import - method parameter types not resolved correctly (131825)
 
 Version 1.5.4
 
