Hi Kleag, thanks for your documentation generators! Will you backport them to the 3.5 branch?
svn path=/trunk/KDE/kdesdk/umbrello/; revision=569866

--- a/THANKS
+++ b/THANKS
@@ -41,6 +41,7 @@ David Hugh-Jones <hughjonesd @yahoo.co.uk>
 Pekka J‰‰skel‰inen <pjaaskel @cs.tut.fi>
 Klas Kalass  <klas.kalass @gmx.de>
 Oliver Kellogg <okellogg @users.sourceforge.net>
+Kleag (kleag @free.fr)
 Tobias Koenig <tokoe @kde.org>
 Piotr Kolaczkowski <P.Kolaczkowski @elka.pw.edu.pl>
 Matthias Kretz <kretz @kde.org>
