Attachment 17246 from JP Fournier adds logic to keep track of files already parsed to avoid gratuitous reparsing. JP, I've added you as co-author to the javaimport.h, hope that's okay :) BUG:131961
svn path=/branches/KDE/3.5/kdesdk/umbrello/; revision=570457

--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,7 @@ Version 1.5.5
   instead of public (131327)
 * Python code generation not independent of diagram view (131790)
 * Java import - method parameter types not resolved correctly (131825)
+* Java import: unable to import AzareusCore (131961)
 
 Version 1.5.4
 
