--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,7 @@ Version 1.5.5
 * Python code generation not independent of diagram view (131790)
 * Java import - method parameter types not resolved correctly (131825)
 * Java import: unable to import AzareusCore (131961)
+* Java import: error on multidimensional arrays (132017)
 
 Version 1.5.4
 
