--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,7 @@ Version 1.5.5
 * Java import - method parameter types not resolved correctly (131825)
 * Java import: unable to import AzareusCore (131961)
 * Java import: error on multidimensional arrays (132017)
+* Java import - array types not resolved correctly (132035)
 
 Version 1.5.4
 
