insertAttribute(): According to JP Fournier, attributes are legitimate members  of interfaces in Java. BUG:132657
svn path=/branches/KDE/3.5/kdesdk/umbrello/; revision=575626

--- a/ChangeLog
+++ b/ChangeLog
@@ -10,6 +10,7 @@ Version 1.5.5
 * Java import - array types not resolved correctly (132035)
 * Java import - "final" and comments in method declaration
   not parsed correctly (132174)
+* Java import - static member vars ignored in interfaces (132657)
 
 Version 1.5.4
 
