--- a/ChangeLog
+++ b/ChangeLog
@@ -8,8 +8,8 @@ Version 1.5.5
 * Java import: unable to import AzareusCore (131961)
 * Java import: error on multidimensional arrays (132017)
 * Java import - array types not resolved correctly (132035)
-* Java import - "final" and comments in method declaration
-  not parsed correctly (132174)
+* Java import - "final" and comments in method declaration not parsed correctly (132174)
+* Java import: spaces in strings cause next member var to be ignored (132472)
 * Java import - static member vars ignored in interfaces (132657)
 
 Version 1.5.4
