Patch from Clarke Brunsdon at  http://www.nullfs.com/umbrello_php5_generator_realization_stub.patch adds stub-methods for all interfaces a class implements.
svn path=/branches/KDE/3.5/kdesdk/umbrello/; revision=577139

--- a/THANKS
+++ b/THANKS
@@ -20,6 +20,7 @@ Laurent Bardi <laurent.Bardi @ipbs.fr>
 Zoltan Bartko <bartko.zoltan @pobox.sk>
 Luis De la Parra Blum <lparrab @gmx.net>
 Raymond Bosman <bosman @hetnet.nl>
+Clarke Brunsdon <clarke @vossoc.org>
 Ben Burton <bab @debian.org>
 Albert Cervera <albertca @jazzfree.com>
 Albert Astals Cid <tsdgeos @terra.es>
