Now that folders are first class document citizens, we can support external  folders more solidly and fully: UMLListViewItem::saveToXMI(): Move saving of external folders to UMLFolder. UMLDoc::loadFolderFile(): Move to UMLFolder. UMLFolder::{save,saveContents}: New. This closes out the last remaining TODO mentioned in commit 575645, "Support  for external folders is temporarily broken". CCBUG:87252
svn path=/branches/KDE/3.5/kdesdk/umbrello/; revision=580517

--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,7 @@ Version 1.5.5
 * Fix load of associations in collaboration diagram (A. Spangler)
 * Bugs/wishes from http://bugs.kde.org:
 * "role A properties" should give class name (69244)
+* Sharing designs, Folders, 3rd Party imports (87252, reimplementation)
 * Java import - importing interfaces - absent visibility treated as package
   instead of public (131327)
 * Python code generation not independent of diagram view (131790)
