Fix for class association not updating the association position when being moved.
svn path=/branches/KDE/3.5/kdesdk/umbrello/; revision=590644

--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,8 @@ Version 1.5.5
 * Fix load of associations in collaboration diagram (A. Spangler)
 * Fix for single selection of an unselected widget when other widgets are selected
 * Fixes for several bugs in toolbar states
+* Fix for message widget selection
+* Fix for class association not updating the association position when being moved
 * Bugs/wishes from http://bugs.kde.org:
 * "role A properties" should give class name (69244)
 * Sharing designs, Folders, 3rd Party imports (87252, reimplementation)
