removeAllAssociations(): Do not increment the iterator when positioned on an  association. Remove the association from m_List unconditionally. BUG:135479
svn path=/branches/KDE/3.5/kdesdk/umbrello/; revision=598502

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Version 1.5.51
+* This is an interim release that fixes a serious regression in version 1.5.5
+  which is detailed at http://bugs.kde.org/135749 (Crash when opening a document)
+
 Version 1.5.5
 
 * PHP5 generator creates stub methods for all interfaces a class implements (C. Brunsdon)
