slotChangeTab{Left,Right}: Cycle through the available diagrams when tabbed  diagrams are turned off. Stop supporting KDE 3.1 while we're at it. BUG:136288
svn path=/branches/KDE/3.5/kdesdk/umbrello/; revision=599343

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,10 @@
+Version 1.5.52
+
+* Bugs/wishes from http://bugs.kde.org:
+* Shift + Left and Shift+Right causes SIGSEGV (136288)
+
 Version 1.5.51
+
 * This is an interim release that fixes a serious regression in version 1.5.5
   which is detailed at http://bugs.kde.org/135749 (Crash when opening a document)
 
